# src/main/java/iot/home/service/iotrest/controllers/HomesApi.java
@@ -1,0 +1,136 @@
+/**
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (6.2.1).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+package iot.home.service.iotrest.controllers;
+
+import iot.home.service.iotrest.entities.CreateHomeRequest;
+import iot.home.service.iotrest.entities.Home;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.Parameters;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.security.SecurityRequirement;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.context.request.NativeWebRequest;
+import org.springframework.web.multipart.MultipartFile;
+
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import jakarta.annotation.Generated;
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen")
+@Validated
+@Tag(name = "homes", description = "the homes API")
+public interface HomesApi {
+
+    /**
+     * PUT /homes
+     * Create new home with the specified data.
+     *
+     * @param createHomeRequest  (required)
+     * @return Home created successfully. (status code 200)
+     */
+    @Operation(
+        operationId = "createHome",
+        tags = { "Homes" },
+        responses = {
+            @ApiResponse(responseCode = "200", description = "Home created successfully.")
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.PUT,
+        value = "/homes",
+        consumes = { "application/json" }
+    )
+    ResponseEntity<Void> createHome(
+        @Parameter(name = "CreateHomeRequest", description = "", required = true) @Valid @RequestBody CreateHomeRequest createHomeRequest
+    );
+
+
+    /**
+     * DELETE /homes/{home-id}
+     * Deletes an existing home
+     *
+     * @param homeId  (required)
+     * @return Home deleted successfully (status code 200)
+     */
+    @Operation(
+        operationId = "deleteHomeById",
+        tags = { "Homes" },
+        responses = {
+            @ApiResponse(responseCode = "200", description = "Home deleted successfully")
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.DELETE,
+        value = "/homes/{home-id}"
+    )
+    ResponseEntity<Void> deleteHomeById(
+        @Parameter(name = "home-id", description = "", required = true) @PathVariable("home-id") String homeId
+    );
+
+
+    /**
+     * GET /homes/{home-id}
+     * Returns the specified home from the system
+     *
+     * @param homeId  (required)
+     * @return Returned a list with the home (status code 200)
+     */
+    @Operation(
+        operationId = "getHomeById",
+        tags = { "Homes" },
+        responses = {
+            @ApiResponse(responseCode = "200", description = "Returned a list with the home", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = Home.class))
+            })
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.GET,
+        value = "/homes/{home-id}",
+        produces = { "application/json" }
+    )
+    ResponseEntity<Home> getHomeById(
+        @Parameter(name = "home-id", description = "", required = true) @PathVariable("home-id") String homeId
+    );
+
+
+    /**
+     * POST /homes/{home-id}
+     * Updates an existing home
+     *
+     * @param homeId  (required)
+     * @param createHomeRequest  (required)
+     * @return Home updated successfully (status code 200)
+     */
+    @Operation(
+        operationId = "postHomeById",
+        tags = { "Homes" },
+        responses = {
+            @ApiResponse(responseCode = "200", description = "Home updated successfully")
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.POST,
+        value = "/homes/{home-id}",
+        consumes = { "application/json" }
+    )
+    ResponseEntity<Void> postHomeById(
+        @Parameter(name = "home-id", description = "", required = true) @PathVariable("home-id") String homeId,
+        @Parameter(name = "CreateHomeRequest", description = "", required = true) @Valid @RequestBody CreateHomeRequest createHomeRequest
+    );
+
+}
