# src/main/java/iot/home/service/iotrest/entities/PostHomeByIdRequest.java
@@ -1,0 +1,109 @@
+package iot.home.service.iotrest.entities;
+
+import java.net.URI;
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonTypeName;
+import org.openapitools.jackson.nullable.JsonNullable;
+import java.time.OffsetDateTime;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
+import io.swagger.v3.oas.annotations.media.Schema;
+
+
+import java.util.*;
+import jakarta.annotation.Generated;
+
+/**
+ * PostHomeByIdRequest
+ */
+
+@JsonTypeName("postHomeById_request")
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen")
+public class PostHomeByIdRequest {
+
+  @JsonProperty("address")
+  private String address;
+
+  @JsonProperty("password")
+  private String password;
+
+  public PostHomeByIdRequest address(String address) {
+    this.address = address;
+    return this;
+  }
+
+  /**
+   * Get address
+   * @return address
+  */
+  
+  @Schema(name = "address", required = false)
+  public String getAddress() {
+    return address;
+  }
+
+  public void setAddress(String address) {
+    this.address = address;
+  }
+
+  public PostHomeByIdRequest password(String password) {
+    this.password = password;
+    return this;
+  }
+
+  /**
+   * Get password
+   * @return password
+  */
+  
+  @Schema(name = "password", required = false)
+  public String getPassword() {
+    return password;
+  }
+
+  public void setPassword(String password) {
+    this.password = password;
+  }
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    PostHomeByIdRequest postHomeByIdRequest = (PostHomeByIdRequest) o;
+    return Objects.equals(this.address, postHomeByIdRequest.address) &&
+        Objects.equals(this.password, postHomeByIdRequest.password);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(address, password);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class PostHomeByIdRequest {\n");
+    sb.append("    address: ").append(toIndentedString(address)).append("\n");
+    sb.append("    password: ").append(toIndentedString(password)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
+
