# target/classes/swagger.yml
@@ -35,6 +35,7 @@ components:
         description:
           type: string
 
+
     Sensor:
       type: object
       properties:
@@ -136,3 +137,80 @@ paths:
         200:
           description:
             User deleted successfully
+  /homes:
+    put:
+      tags:
+        - Homes
+      operationId: createHome
+      description:
+        Create new home with the specified data.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              properties:
+                name:
+                  type: string
+                address:
+                  type: string
+                description:
+                  type: string
+      responses:
+        '200':
+          description:
+            Home created successfully.
+
+  /homes/{home-id}:
+    parameters:
+      - name: "home-id"
+        in: path
+        required: true
+        schema:
+          type: string
+    get:
+      tags:
+        - Homes
+      operationId: getHomeById
+      description:
+        Returns the specified home from the system
+      responses:
+        '200':
+          description:
+            Returned a list with the home
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Home'
+    post:
+      tags:
+        - Homes
+      operationId: postHomeById
+      description:
+        Updates an existing home
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              properties:
+                name:
+                  type: string
+                address:
+                  type: string
+                description:
+                  type: string
+      responses:
+        200:
+          description:
+            Home updated successfully
+    delete:
+      tags:
+        - Homes
+      operationId: deleteHomeById
+      description:
+        Deletes an existing home
+      responses:
+        200:
+          description:
+            Home deleted successfully
